--- a/html/plugins/css/plugins.css
+++ b/html/plugins/css/plugins.css
@@ -1330,21 +1330,9 @@ select.form-control, select.form-select {
 	width: auto;
 }
 
-/** bootstrap3 */
-.control-label, .control-value {
-	padding-right: 1em;
-	white-space: pre-wrap;
-	word-break: break-all;
-}
-
 /** bootstrap4/5 */
 .hidden {
 	display: none !important;
-}
-.col-form-label {
-	padding-right: 1em;
-	position: relative;
-	white-space: pre-wrap;
 }
 @media (min-width: 768px) {
 	.col-form-label {
@@ -1352,10 +1340,29 @@ select.form-control, select.form-select {
 	}
 }
 
+/** label */
+.control-label, .col-form-label {
+	padding-right: 1em;
+	position: relative;
+	word-break: break-all;
+}
+
 /** view only control value */
 .control-value, .col-form-value {
 	padding-top: var(--ui-input-py);
 	padding-bottom: var(--ui-input-py);
+	word-break: break-all;
+}
+
+/** text */
+.control-label > pre, .control-value > pre,
+.col-form-label > pre, .col-form-value > pre {
+	border: 0;
+	font-size: 1em;
+	margin: 0;
+	padding: 0;
+	white-space: pre-wrap;
+	word-break: break-all;
 }
 
 /** disable bootstrap not-allowed cursor */
@@ -1722,18 +1729,6 @@ form.lined > .form-group:last-of-type, form.lined > .row:last-of-type {
 .ui-view.lined > .row:last-of-type {
 	border-bottom: 0;
 }
-.ui-view .ui-label {
-	white-space: pre-wrap;
-}
-@media (max-width: 767px) {
-	.ui-label {
-		width: auto;
-	}
-}
-.ui-view .ui-value {
-	white-space: pre-wrap;
-	word-break: break-all;
-}
 
 /** label weight **/
 .label-bold .ui-label {
@@ -1752,3 +1747,23 @@ form.lined > .form-group:last-of-type, form.lined > .row:last-of-type {
 		text-align: left;
 	}
 }
+
+/** text **/
+.ui-label, .ui-value {
+	word-break: break-all;
+}
+
+.ui-label > pre, .ui-value > pre {
+	border: 0;
+	font-size: 1em;
+	margin: 0;
+	padding: 0;
+	white-space: pre-wrap;
+	word-break: break-all;
+}
+
+.text-prewrap {
+	white-space: pre-wrap;
+	word-break: break-all;
+}
+
